Bug 459869 - Favicons are not always accurate or detected for Institutions
Summary: Favicons are not always accurate or detected for Institutions
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: ux-ui (other bugs)
Version First Reported In: 5.1.2
Platform: Mint (Ubuntu based) Linux
: NOR minor
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-09-30 18:38 UTC by Odin Vex
Modified: 2023-11-25 18:06 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Odin Vex 2022-09-30 18:38:47 UTC
SUMMARY
***
Favicons are not always accurate or detected for Institutions, especially those that use custom paths. Perhaps allowing users to input a custom URI or even allow importing of favicons (ico/png/svg) might be helpful.
***


STEPS TO REPRODUCE
1. Add an Institute, specify a website such as "https://sfcuonline.org/".

OBSERVED RESULT
Generic Bank icon is used.

EXPECTED RESULT
Favicon (currently located at https://sfcuonline.org/application/themes/vibrant_theme/_img/favicon.ico or https://sfcuonline.org/application/themes/vibrant_theme/_img/favicon.png) should be used.

SOFTWARE/OS VERSIONS
Host: Linux Mint 21 x64
Software: kMyMoney 5.1.2

ADDITIONAL INFORMATION
I haven't tested this on other platforms or versions.
Comment 1 Thomas Baumgart 2023-11-25 18:06:23 UTC
Git commit 05551f150a11ac130c0dde6802beae69dd9b9f49 by Thomas Baumgart.
Committed on 25/11/2023 at 19:02.
Pushed by tbaumgart into branch 'master'.

Provide separate URL to fetch icon for institution
FIXED-IN: 5.2

M  +19   -6    kmymoney/dialogs/knewinstitutiondlg.cpp
M  +2    -1    kmymoney/dialogs/knewinstitutiondlg.h
M  +86   -62   kmymoney/dialogs/knewinstitutiondlg.ui
M  +13   -1    kmymoney/views/simpleledgerview.cpp

https://invent.kde.org/office/kmymoney/-/commit/05551f150a11ac130c0dde6802beae69dd9b9f49