Provide separate URL to fetch icon for institution

BUG: 459869
FIXED-IN: 5.2